--- a/that_was_easy/index.html
+++ b/that_was_easy/index.html
@@ -4,7 +4,9 @@
          <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
+        <div>
         <button id="easy"> Easy </button>
+        </div>
         
         <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
         <script type="text/javascript" src="main.js"></script>
