CSS for French websie

--- a/Au_Revoir_Les_Enfants/SparkNotes_ Chronicle of a Death Foretold_ Characters.html
+++ b/Au_Revoir_Les_Enfants/SparkNotes_ Chronicle of a Death Foretold_ Characters.html
@@ -8,8 +8,8 @@
     <!-- 11 -->
         <script src="//img.sparknotes.com/js/redirection_mobile.min.js"></script> 
  <title>SparkNotes: Chronicle of a Death Foretold: Characters</title>
-    <link rel="shortcut icon" href="http://img.sparknotes.com/images/new_global/new_favicon.ico" />
-    <link rel='stylesheet' href='http://img.sparknotes.com/css/2013/styles.css?rev=1208a'/>
+    <link rel="shortcut icon" href="https://img.sparknotes.com/images/new_global/new_favicon.ico" />
+    <link rel='stylesheet' href='https://img.sparknotes.com/css/2013/styles.css?rev=1208a'/>
 		
     <!--[if IE 6]><link rel="stylesheet" type="text/css" href="http://img.sparknotes.com/css/2013/styleIE7.css?rev=1208a" /><![endif]-->
     <!--[if IE 7]><link rel="stylesheet" type="text/css" href="http://img.sparknotes.com/css/2013/styleIE7.css?rev=1208a" /><![endif]-->
@@ -18,7 +18,7 @@
     
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     
-    	<link rel='stylesheet' href='http://img.sparknotes.com/css/gigya.css'/>
+    	<link rel='stylesheet' href='https://img.sparknotes.com/css/gigya.css'/>
 
 <header class="main-header">
 	
