--- a/Au_Revoir_Les_Enfants/SparkNotes_ Chronicle of a Death Foretold.html
+++ b/Au_Revoir_Les_Enfants/SparkNotes_ Chronicle of a Death Foretold.html
@@ -8,7 +8,7 @@
     <!-- 11 -->
         <script src="//img.sparknotes.com/js/redirection_mobile.min.js"></script> 
  <title>SparkNotes: Chronicle of a Death Foretold: Characters</title>
-    <link rel="shortcut icon" href="http://img.sparknotes.com/images/new_global/new_favicon.ico" />
+    <link rel="shortcut icon" href="https://img.sparknotes.com/images/new_global/new_favicon.ico" />
     <link rel='stylesheet' href='http://img.sparknotes.com/css/2013/styles.css?rev=1208a'/>
 		
     <!--[if IE 6]><link rel="stylesheet" type="text/css" href="http://img.sparknotes.com/css/2013/styleIE7.css?rev=1208a" /><![endif]-->
