Fixed CSS on Published Websites for Au revoir les enfants project

--- a/Au_Revoir_Les_Enfants/SparkNotes_ Chronicle of a Death Foretold.html
+++ b/Au_Revoir_Les_Enfants/SparkNotes_ Chronicle of a Death Foretold.html
@@ -9,7 +9,7 @@
         <script src="//img.sparknotes.com/js/redirection_mobile.min.js"></script> 
  <title>SparkNotes: Chronicle of a Death Foretold: Characters</title>
     <link rel="shortcut icon" href="https://img.sparknotes.com/images/new_global/new_favicon.ico" />
-    <link rel='stylesheet' href='http://img.sparknotes.com/css/2013/styles.css?rev=1208a'/>
+    <link rel='stylesheet' href='https://img.sparknotes.com/css/2013/styles.css?rev=1208a'/>
 		
     <!--[if IE 6]><link rel="stylesheet" type="text/css" href="http://img.sparknotes.com/css/2013/styleIE7.css?rev=1208a" /><![endif]-->
     <!--[if IE 7]><link rel="stylesheet" type="text/css" href="http://img.sparknotes.com/css/2013/styleIE7.css?rev=1208a" /><![endif]-->
@@ -99,7 +99,7 @@
 			<div id="ad-skin-img">
 				
 				<div class="inner-content blue-background">
-				<a  href="#"> <img style="padding-top:-15px !important;" src="/Users/18vvoruganti/Desktop/School/French/Au Revoir Les Enfants Site/eclairnotes.png"></a>
+				<a  href="#"> <img style="padding-top:-15px !important;" src="eclairnotes.png"></a>
               <div class="grammarly"></div>
     <div class="col-small-left">
     <div class="light-blue-background border-blue left-menu" style="margin-top:15px">
