--- a/Au_Revoir_Les_Enfants/SparkNotes_ Chronicle of a Death Foretold_ Characters.html
+++ b/Au_Revoir_Les_Enfants/SparkNotes_ Chronicle of a Death Foretold_ Characters.html
@@ -99,7 +99,7 @@
 			<div id="ad-skin-img">
 				
 				<div class="inner-content blue-background">
-				<a  href="#"> <img style="padding-top:-15px !important;" src="/Users/18vvoruganti/Desktop/School/French/Au Revoir Les Enfants Site/eclairnotes.png"></a>
+				<a  href="#"> <img style="padding-top:-15px !important;" src="eclairnotes.png"></a>
               <div class="grammarly"></div>
     <div class="col-small-left">
     <div class="light-blue-background border-blue left-menu" style="margin-top:15px">
