--- a/Au_Revoir_Les_Enfants/SparkNotes_ Chronicle of a Death Foretold_ Characters.html
+++ b/Au_Revoir_Les_Enfants/SparkNotes_ Chronicle of a Death Foretold_ Characters.html
@@ -7,7 +7,7 @@
 <script type='text/javascript' src='//cdn.districtm.ca/v4.0.header.min.js'></script>
     <!-- 11 -->
         <script src="//img.sparknotes.com/js/redirection_mobile.min.js"></script> 
- <title>SparkNotes: Chronicle of a Death Foretold: Characters</title>
+ <title>&#201;clairnotes: Au Revoir Les Enfants</title>
     <link rel="shortcut icon" href="https://img.sparknotes.com/images/new_global/new_favicon.ico" />
     <link rel='stylesheet' href='https://img.sparknotes.com/css/2013/styles.css?rev=1208a'/>
 		
