--- a/Au_Revoir_Les_Enfants/SparkNotes_ Chronicle of a Death Foretold.html
+++ b/Au_Revoir_Les_Enfants/SparkNotes_ Chronicle of a Death Foretold.html
@@ -7,7 +7,7 @@
 <script type='text/javascript' src='//cdn.districtm.ca/v4.0.header.min.js'></script>
     <!-- 11 -->
         <script src="//img.sparknotes.com/js/redirection_mobile.min.js"></script> 
- <title>&#201;clairnotes: Au Revoir Les Enfants</title>
+ <title>Vineeth et Dan</title>
     <link rel="shortcut icon" href="https://img.sparknotes.com/images/new_global/new_favicon.ico" />
     <link rel='stylesheet' href='https://img.sparknotes.com/css/2013/styles.css?rev=1208a'/>
 		
@@ -124,7 +124,7 @@
             <h1 class="title padding-btm-0">Au Revoir Les Enfants</h1><h2 class="author">Louis Malle</h2>
 
             
-            <div class="clearfix next-previous center"><a class="left arrow-nav previous text-color" href="http://www.sparknotes.com/lit/chrondeath/summary.html" title="previous">&larr;</a><div class="next-title text-color is-centered">L'intrigue</div><a class="right arrow-nav next text-color" href="http://www.sparknotes.com/lit/chrondeath/canalysis.html" title="next">&rarr;</a></div><div class="tooltip dark-grey-background"><h3 class="semi-bold">Plot Overview</h3></div><div class="tooltip dark-grey-background"><h3 class="semi-bold">Main Character Analysis</h3></div>
+            <div class="clearfix next-previous center"><a class="left arrow-nav previous text-color" href="http://www.sparknotes.com/lit/chrondeath/summary.html" title="previous">&larr;</a><div class="next-title text-color is-centered">L'intrigue</div><a class="right arrow-nav next text-color" href="http://www.sparknotes.com/lit/chrondeath/canalysis.html" title="next">&rarr;</a></div><div class="tooltip dark-grey-background"><h3 class="semi-bold">Vineeth et Dan</h3></div><div class="tooltip dark-grey-background"><h3 class="semi-bold">Main Character Analysis</h3></div>
         <div id="plot" class="studyGuideText">
             
     <div class="content_txt" id="Santiago Nasar">
