--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@ Outside of my technical pursuits, I spend my time trying to give back to communi
                   </a>
                 </li>
             
-                <li class="list-inline-item">
+                <!-- <li class="list-inline-item">
                   <a href="https://devpost.com/VineethVoruganti?ref_content=user-portfolio&amp;ref_feature=portfolio&amp;ref_medium=global-nav" data-toggle="tooltip" title="Devpost" data-offset="0 10">
                     <span class="fa-stack fa-lg">
                       <i class="fa fa-circle fa-stack-2x"></i>
                       <i class="fab fa-devpost fa-stack-1x fa-inverse"></i>
                     </span>
                   </a>
-                </li>
+                </li> -->
             
           </ul>
         </div>
