Actually load changes

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ Outside of my technical pursuits, I spend my time trying to give back to communi
 <div class="resume-item d-flex flex-column flex-md-row mb-5">
   <div class="publication-content mr-auto">
     <h3 class="mb-0">Patent - <a href="/publications/datasynchronizationpatent/">Method for determining a start offset between a video recording device and an inertial measurement unit for use in synchronizing motion data of an object collected by the inertial measurement unit attached to the object with video frames captured by an image sensor of the video recording device of the object in motion </a></h3>
-    <div>This talk looked at Liberty Mutual’s transformation to Continuous Integration, Continuous Delivery, and DevOps. For a large, heavily regulated industry, this task can not only be daunting, but viewed by many as impossible.</div>
+    <div>This patent was developed in order to address the problem of trying to synchronize two simultaneous data streams that relied on different clocks. The contraints under which this methodology were developed involved the process to be completeley offline to not involve establishing a new connection between the data collection devices</div>
     <p><ul class="tags">
     
       <li><a class="tag" href="/tags/ffmpeg">ffmpeg</a></li>
