--- a/publications/datasynchronizationpatent/index.html
+++ b/publications/datasynchronizationpatent/index.html
@@ -103,21 +103,15 @@
     <h2 class="mb-0"><span class="text-primary">Method for determining a start offset between a video recording device and an inertial measurement unit for use in synchronizing motion data of an object collected by the inertial measurement unit attached to the object with video frames captured by an image sensor of the video recording device of the object in motion </span></h2>
     <p><a href="https://patents.google.com/patent/US10284752B1/en?q=vineeth&#43;voruganti&amp;oq=vineeth&#43;voruganti">Link to full Patent</a></p>
     <img src="/img/Patent.PNG" style="max-height:300px;max-width:30%;" align="right"/>
-    <p>This talk looked at Liberty Mutual’s transformation to Continuous Integration, Continuous Delivery, and DevOps. For a large, heavily regulated industry, this task can not only be daunting, but viewed by many as impossible. Often, organizations try to reduce the friction through micro-fixes, but Eddie’s team asked how to change the culture to reduce the friction and concluded with the following final points:</p>
+    <p>This patent was developed in order to address the problem of trying to synchronize two simultaneous data streams that relied on different clocks. The contraints under which this methodology were developed involved the process to be completeley offline to not involve establishing a new connection between the data collection devices.</p>
+
+<p>The final solution had several aspects to it:</p>
 
 <ul>
-<li>Don’t mandate DevOps. Give employees the chance to master their discipline with examples to set and follow.</li>
-<li>Favor deep end-to-end accomplishments over broad but incremental steps forward. Focus on taking the right teams far before encouraging broad adoption.</li>
-<li>Centralize the platforms and tools that your teams shouldn’t be thinking about. Provide foundational services/commodities and let teams stay on purpose.</li>
-<li>Incorporate contributions from everyone; don’t stifle autonomy. Stay open to new ways of working.</li>
-<li>Challenge security policies, but respect intentions. Find new ways to enforce concerns without abandoning precaution.</li>
+<li>A testing system to determine the level to which the two devices are out of sync</li>
+<li>A calculation methodology for using the information from the test to quantify the difference</li>
+<li>A consideration for variable rates and drift in both of the devices.</li>
 </ul>
-
-
-<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-  <iframe src="//www.youtube.com/embed/FsfKsqI07jM" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
-</div>
-
 
     <p class="mt-3">
     <ul class="tags">
