--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,17 @@
 <!DOCTYPE HTML>
 <!-- Want to model this based on a notion page -->
 <!-- https://themes.gohugo.io/harbor/ Something like this-->
+<!-- TODO add a css reset -->
+<!-- TODO add icons, support for markdown, and mathjax, maybe UML -->
+<!-- Might want to implement this in react -->
 <html>
     <head>
         <link type="text/css" rel="stylesheet" href="css/blog.css">
     </head>
     <body>
-        <h1>Welcome to My Blog</h1>
+        <div id="main">
+            <h1>Welcome to My Blog</h1>
+            <div=>
+        </div>
     </body>
 </html>
