Some plans for the layout

--- a/index.html
+++ b/index.html
@@ -8,10 +8,45 @@
     </head>
     <body>
 	<nav></nav>
-	<section id="landing"></section>
+	<section id="landing">
+        <!-- Image, Name, Description, Social Media -->
+        <img src="#"></img>
+        <h1> Vineeth Voruganti </h1>
+        <p>Hardware Hacker, Software Engineer, Game Developer, Product Manager</p> <!-- Could do that cheesy text animation here -->
+        <a href="#"> LinkedIn </a>
+        <a href="#"> Github </a>
+        <a href="#"> Medium </a>
+    </section>
+	<section id="publications">
+        <div>Patent 1</div>
+        <div>Patent 2</div>
+    </section>
+	<section id="projects">
+        <!--
+            - Cal Hacks
+            - Roomie 
+            - Repo Link Tester
+            - Teleport Game
+            - Workspace (Vim Setup)
+            - 
+        -->
+    </section>
+	<section id="experience">
+    <!--
+        Timeline 
+        - Nth
+        - Fortamus
+        - Aerospace
+        - Tesla
+    -->
+    </section>
 	<section id="skills"></section>
-	<section id="publications"></section>
-	<section id="projects"></section>
-	<section id="experience"></section>
+    <button> Download Resume </button>
+    <section id="contact">
+        <form>
+        </form>
+        <p> Or Just email me </p>
+        <a href="#"><button>Email Me</button></a>
+    </section>
     </body>
 </html>
