Basic skeleton setup

--- a/index.html
+++ b/index.html
@@ -1,52 +1,66 @@
 <!DOCTYPE html>
 <html>
     <head>
-	<meta charset="utf-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-	<link src="https://www.jsdelivr.com/package/npm/bulma" type-"text/css" rel="stylesheet" />	
+	<script src="https://www.jsdelivr.com/package/npm/bulma"></script>	
+
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+
 	<title>Vineeth Voruganti</title>
     </head>
     <body>
 	<nav></nav>
-	<section id="landing">
-        <!-- Image, Name, Description, Social Media -->
-        <img src="#"></img>
-        <h1> Vineeth Voruganti </h1>
-        <p>Hardware Hacker, Software Engineer, Game Developer, Product Manager</p> <!-- Could do that cheesy text animation here -->
-        <a href="#"> LinkedIn </a>
-        <a href="#"> Github </a>
-        <a href="#"> Medium </a>
-    </section>
-	<section id="publications">
-        <div>Patent 1</div>
-        <div>Patent 2</div>
-    </section>
-	<section id="projects">
+    <div id="main">
+        <section id="landing">
+            <!-- Image, Name, Description, Social Media -->
+            <img src="#"></img>
+            <h1> Vineeth Voruganti </h1>
+            <p>Hardware Hacker, Software Engineer, Game Developer, Product Manager</p> <!-- Could do that cheesy text animation here -->
+            <a class="button" href="#"> LinkedIn</a>
+            <a class="button" href="#"> Github </a>
+            <a class="button" href="#"> Devpost</a>
+            <a class="button" href="#"> Medium </a>
+        </section>
+        <section id="publications">
+            <div>Patent 1</div>
+            <div>Patent 2</div>
+        </section>
+        <section id="projects">
+            <div>
+                <div class="card">Cosine</div>
+                <div class="card">Repo Tester</div>
+                <div class="card">Teleport Game</div>
+                <div class="card">Dotfiles</div>
+            </div>
+            <!--
+                - Cosine - Cal Hacks
+                - Roomie 
+                - Repo Link Tester
+                - Teleport Game
+                - Workspace (Vim Setup)
+                - 
+            -->
+        </section>
+        <section id="experience">
         <!--
-            - Cal Hacks
-            - Roomie 
-            - Repo Link Tester
-            - Teleport Game
-            - Workspace (Vim Setup)
-            - 
+            Timeline 
+            - Nth
+            - Fortamus
+            - Aerospace
+            - Tesla
         -->
-    </section>
-	<section id="experience">
-    <!--
-        Timeline 
-        - Nth
-        - Fortamus
-        - Aerospace
-        - Tesla
-    -->
-    </section>
-	<section id="skills"></section>
-    <button> Download Resume </button>
-    <section id="contact">
-        <form>
-        </form>
-        <p> Or Just email me </p>
-        <a href="#"><button>Email Me</button></a>
-    </section>
+        </section>
+        <section id="skills"></section>
+        <button> Download Resume </button>
+        <section id="contact">
+            <form>
+                <input 
+            </form>
+            <p> Or Just email me </p>
+            <a href="#"><button>Email Me</button></a>
+        </section>
+    </div>
     </body>
 </html>
