--- a/post-2/index.html
+++ b/post-2/index.html
@@ -4,24 +4,24 @@ data-styled.g1[id="Navbar__Brand-sc-2ueg8-0"]{content:"iQlQwo,"}/*!sc*/
 .eaYZpt:hover{background-color:#DDDDDD;}/*!sc*/
 data-styled.g2[id="Navbar__PageLink-sc-2ueg8-1"]{content:"eaYZpt,"}/*!sc*/
 </style><link rel="manifest" href="/manifest.webmanifest"/><link rel="apple-touch-icon" sizes="48x48" href="/icons/icon-48x48.png"/><link rel="apple-touch-icon" sizes="72x72" href="/icons/icon-72x72.png"/><link rel="apple-touch-icon" sizes="96x96" href="/icons/icon-96x96.png"/><link rel="apple-touch-icon" sizes="144x144" href="/icons/icon-144x144.png"/><link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.png"/><link rel="apple-touch-icon" sizes="256x256" href="/icons/icon-256x256.png"/><link rel="apple-touch-icon" sizes="384x384" href="/icons/icon-384x384.png"/><link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512x512.png"/><title data-react-helmet="true">🌠Turbocharge Windows Development with WSL | Vineeth Voruganti</title><meta data-react-helmet="true" name="description" content="I am currently using a Surface Book as my main laptop for everyday work and development.
-Initially when I was setting up Linux as a dual…"/><meta data-react-helmet="true" property="og:title" content="I am currently using a Surface Book as my main laptop for everyday work and development.
-Initially when I was setting up Linux as a dual…"/><meta data-react-helmet="true" property="og:type" content="website"/><meta data-react-helmet="true" name="twitter:card" content="summary"/><meta data-react-helmet="true" name="twitter:creator" content="Vineeth Voruganti"/><meta data-react-helmet="true" name="twitter:title" content="🌠Turbocharge Windows Development with WSL"/><meta data-react-helmet="true" name="twitter:title" content="I am currently using a Surface Book as my main laptop for everyday work and development.
-Initially when I was setting up Linux as a dual…"/><link as="script" rel="preload" href="/webpack-runtime-d69dc2f13669fd7d44c4.js"/><link as="script" rel="preload" href="/framework-9fa3c3527bf76bdd7ce7.js"/><link as="script" rel="preload" href="/app-4b3e173a4604465e8cf8.js"/><link as="script" rel="preload" href="/styles-8636a280cbc61d53ad10.js"/><link as="script" rel="preload" href="/6b22bcb9f177f895c17ee3db09c1f3a2c6fdec2f-8b16ae8faed901cd0849.js"/><link as="script" rel="preload" href="/component---src-components-blog-post-js-dbf37646bfa9775f9769.js"/><link as="fetch" rel="preload" href="/page-data/post-2/page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/page-data/app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><div><nav class="navbar-module--nav--3I2Aa"><div class="navbar-module--navLeft--1G_C8"><a class="Navbar__Brand-sc-2ueg8-0 iQlQwo" href="/">Vineeth Voruganti</a></div><div class="navbar-module--navRight--1uMLB"><a class="Navbar__PageLink-sc-2ueg8-1 eaYZpt" href="/">Blog </a><a class="Navbar__PageLink-sc-2ueg8-1 eaYZpt" href="/aboutme">About Me </a></div></nav><div class="post-module--main--270KK"><h1>🌠Turbocharge Windows Development with WSL</h1><p id="date">05/12/2020<!-- --> <!-- -->WSL</p><hr/><div><p>I am currently using a Surface Book as my main laptop for everyday work and development.
-Initially when I was setting up Linux as a dual boot I found that I was not a
-fan of the drastic performance and battery life cut that I would have to commit to.
-So I took it upon myself to try and optimize my development environment on Windows
-itself.</p>
+Initially, when I was setting up Linux as a dual…"/><meta data-react-helmet="true" property="og:title" content="I am currently using a Surface Book as my main laptop for everyday work and development.
+Initially, when I was setting up Linux as a dual…"/><meta data-react-helmet="true" property="og:type" content="website"/><meta data-react-helmet="true" name="twitter:card" content="summary"/><meta data-react-helmet="true" name="twitter:creator" content="Vineeth Voruganti"/><meta data-react-helmet="true" name="twitter:title" content="🌠Turbocharge Windows Development with WSL"/><meta data-react-helmet="true" name="twitter:title" content="I am currently using a Surface Book as my main laptop for everyday work and development.
+Initially, when I was setting up Linux as a dual…"/><link as="script" rel="preload" href="/webpack-runtime-d69dc2f13669fd7d44c4.js"/><link as="script" rel="preload" href="/framework-9fa3c3527bf76bdd7ce7.js"/><link as="script" rel="preload" href="/app-4b3e173a4604465e8cf8.js"/><link as="script" rel="preload" href="/styles-8636a280cbc61d53ad10.js"/><link as="script" rel="preload" href="/6b22bcb9f177f895c17ee3db09c1f3a2c6fdec2f-8b16ae8faed901cd0849.js"/><link as="script" rel="preload" href="/component---src-components-blog-post-js-dbf37646bfa9775f9769.js"/><link as="fetch" rel="preload" href="/page-data/post-2/page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/page-data/app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><div><nav class="navbar-module--nav--3I2Aa"><div class="navbar-module--navLeft--1G_C8"><a class="Navbar__Brand-sc-2ueg8-0 iQlQwo" href="/">Vineeth Voruganti</a></div><div class="navbar-module--navRight--1uMLB"><a class="Navbar__PageLink-sc-2ueg8-1 eaYZpt" href="/">Blog </a><a class="Navbar__PageLink-sc-2ueg8-1 eaYZpt" href="/aboutme">About Me </a></div></nav><div class="post-module--main--270KK"><h1>🌠Turbocharge Windows Development with WSL</h1><p id="date">05/12/2020<!-- --> <!-- -->WSL</p><hr/><div><p>I am currently using a Surface Book as my main laptop for everyday work and development.
+Initially, when I was setting up Linux as a dual boot I found that I was not a
+fan of the drastic cut to performance and battery life I would have to commit to.
+So, I took it upon myself to try and optimize my development environment on Windows,
+despite it being less than ideal.</p>
 <p>The first thing I did was set up Windows Subsystem Linux (WSL). This is basically
 a utility that was built by microsoft that lets you run a terminal with a full linux
 kernel while still in Windows. It sort of operates like a virtual machine, but
-you can access both your linux and regular windows file system from within it.
+you can access both your Linux and regular Windows file system from within it.
 There are two versions of this and which one you want to use will very depending
 on your needs</p>
 <p>WSL 1 is the original version which has the benefit of being faster when you are
 messing with your Windows filesystem, while WSL 2 is the newer one and has better
 performance in the linux file system.</p>
 <p>I figured I would probably be staying within the linux file system so I opted to
-use WSL 2. Now at the time of writing this WSL 2 was only available if you used
+use WSL 2. Now, at the time of writing this, WSL 2 was only available if you used
 the Windows Insider Build of Windows 10. I also chose to use the Ubuntu version
 of WSL, but you can choose whichever one you like.</p>
 <h2>Terminal Emulator</h2>
@@ -31,8 +31,8 @@ use that was fast and customizable. Initially, I was between
 <p>ConEMU seems to be the more feature rich application but I found the support for
 color customization to be quite lackluster as the color schemes I tried were not
 working. Also I found performance with apps like VIM were quite slow. <strong>Alacritty</strong>
-is great because it was built with performance in mind. It used the graphics card
-in my computer to increase speed.</p>
+is great because it was built with performance in mind and messing with colors
+was really straight forward. </p>
 <p>I installed it using chocolatey</p>
 <pre><code class="language-bash">choco install alacritty
 </code></pre>
@@ -65,9 +65,9 @@ within WSL. This isn't really perfect but I could. I downloaded an application
 called <a href="https://sourceforge.net/projects/vcxsrv/">VcXsrv</a>.</p>
 <p>Now in order to set it up to work with my WSL I needed to set the following
 variable in my <code>.bashrc</code>. Just make sure to substitute in your own ip address.
-you can find it in the terminal by command prompt with <code>ipconfig</code></p>
+you can find it in the command prompt with <code>ipconfig</code></p>
 <p><strong>NOTE</strong> the ip address given if you run <code>ifconfig</code> in WSL is different than your
-actual IP address so make sure you use command prompt.</p>
+actual IP address, so make sure you use command <em>prompt</em>.</p>
 <pre><code class="language-bash">export DISPLAY:{MY IP ADDRESS}:0.0
 export LIBGL_ALWAYS_INDIRECT=1
 </code></pre>
@@ -142,14 +142,14 @@ like XFCE and it will appear on the screen.</p>
 </code></pre>
 <p>then once the server is running just run <code>xfce-session</code> in the terminal</p>
 <p><strong>NOTE</strong> This is a notable difference between WSL 1 and 2. I don't think you
-follow the same steps with WSL 2</p>
-<p>Once I had that set I was able to run things like XFCE from within windows.
-from here I could install</p>
+follow the same steps with WSL 1</p>
+<p>Once I had that setup, I was able to run things like XFCE from within windows.</p>
 <h2>Running Windows Applications</h2>
 <p>A neat trick of WSL is that if everything is running properly you can actually
 run windows .exe programs from within WSL. You can try this out by typing
 <code>explorer.exe .</code> This is a handy trick to open a file explorer in your WSL partition.</p>
 <p>Also handy if you want to run a windows program on files in WSL without manually
-moving them to Windows.</p>
+moving them to Windows. I used to this trick to develop Löve2D games from WSL
+and launch them from Windows.</p>
 <p>If you want to see more of my own environment you can checkout my
 <a href="https://github.com/VVoruganti/dotfiles">dotfiles</a> on my github page</p></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/post-2/";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-4b3e173a4604465e8cf8.js"],"component---cache-caches-gatsby-plugin-offline-app-shell-js":["/component---cache-caches-gatsby-plugin-offline-app-shell-js-4221fab6bc348d601965.js"],"component---src-components-blog-post-js":["/component---src-components-blog-post-js-dbf37646bfa9775f9769.js"],"component---src-pages-404-js":["/component---src-pages-404-js-339e181fcaf531610d75.js"],"component---src-pages-aboutme-js":["/component---src-pages-aboutme-js-c329583be86259420cc9.js"],"component---src-pages-index-js":["/component---src-pages-index-js-b3f4c5844ae069c75d0d.js"]};/*]]>*/</script><script src="/component---src-components-blog-post-js-dbf37646bfa9775f9769.js" async=""></script><script src="/6b22bcb9f177f895c17ee3db09c1f3a2c6fdec2f-8b16ae8faed901cd0849.js" async=""></script><script src="/styles-8636a280cbc61d53ad10.js" async=""></script><script src="/app-4b3e173a4604465e8cf8.js" async=""></script><script src="/framework-9fa3c3527bf76bdd7ce7.js" async=""></script><script src="/webpack-runtime-d69dc2f13669fd7d44c4.js" async=""></script></body></html>
