--- a/post-2/index.html
+++ b/post-2/index.html
@@ -6,21 +6,21 @@ data-styled.g2[id="Navbar__PageLink-sc-2ueg8-1"]{content:"eaYZpt,"}/*!sc*/
 </style><link rel="manifest" href="/manifest.webmanifest"/><link rel="apple-touch-icon" sizes="48x48" href="/icons/icon-48x48.png"/><link rel="apple-touch-icon" sizes="72x72" href="/icons/icon-72x72.png"/><link rel="apple-touch-icon" sizes="96x96" href="/icons/icon-96x96.png"/><link rel="apple-touch-icon" sizes="144x144" href="/icons/icon-144x144.png"/><link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.png"/><link rel="apple-touch-icon" sizes="256x256" href="/icons/icon-256x256.png"/><link rel="apple-touch-icon" sizes="384x384" href="/icons/icon-384x384.png"/><link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512x512.png"/><title data-react-helmet="true">🌠Turbocharge Windows Development with WSL | Vineeth Voruganti</title><meta data-react-helmet="true" name="description" content="I am currently using a Surface Book as my main laptop for everyday work and development.
 Initially, when I was setting up Linux as a dual…"/><meta data-react-helmet="true" property="og:title" content="I am currently using a Surface Book as my main laptop for everyday work and development.
 Initially, when I was setting up Linux as a dual…"/><meta data-react-helmet="true" property="og:type" content="website"/><meta data-react-helmet="true" name="twitter:card" content="summary"/><meta data-react-helmet="true" name="twitter:creator" content="Vineeth Voruganti"/><meta data-react-helmet="true" name="twitter:title" content="🌠Turbocharge Windows Development with WSL"/><meta data-react-helmet="true" name="twitter:title" content="I am currently using a Surface Book as my main laptop for everyday work and development.
-Initially, when I was setting up Linux as a dual…"/><link as="script" rel="preload" href="/webpack-runtime-d69dc2f13669fd7d44c4.js"/><link as="script" rel="preload" href="/framework-9fa3c3527bf76bdd7ce7.js"/><link as="script" rel="preload" href="/app-4b3e173a4604465e8cf8.js"/><link as="script" rel="preload" href="/styles-8636a280cbc61d53ad10.js"/><link as="script" rel="preload" href="/6b22bcb9f177f895c17ee3db09c1f3a2c6fdec2f-8b16ae8faed901cd0849.js"/><link as="script" rel="preload" href="/component---src-components-blog-post-js-dbf37646bfa9775f9769.js"/><link as="fetch" rel="preload" href="/page-data/post-2/page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/page-data/app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><div><nav class="navbar-module--nav--3I2Aa"><div class="navbar-module--navLeft--1G_C8"><a class="Navbar__Brand-sc-2ueg8-0 iQlQwo" href="/">Vineeth Voruganti</a></div><div class="navbar-module--navRight--1uMLB"><a class="Navbar__PageLink-sc-2ueg8-1 eaYZpt" href="/">Blog </a><a class="Navbar__PageLink-sc-2ueg8-1 eaYZpt" href="/aboutme">About Me </a></div></nav><div class="post-module--main--270KK"><h1>🌠Turbocharge Windows Development with WSL</h1><p id="date">05/12/2020<!-- --> <!-- -->WSL</p><hr/><div><p>I am currently using a Surface Book as my main laptop for everyday work and development.
+Initially, when I was setting up Linux as a dual…"/><link as="script" rel="preload" href="/webpack-runtime-17b155b854d13812fd36.js"/><link as="script" rel="preload" href="/framework-9fa3c3527bf76bdd7ce7.js"/><link as="script" rel="preload" href="/app-4b3e173a4604465e8cf8.js"/><link as="script" rel="preload" href="/styles-8636a280cbc61d53ad10.js"/><link as="script" rel="preload" href="/6b22bcb9f177f895c17ee3db09c1f3a2c6fdec2f-8b16ae8faed901cd0849.js"/><link as="script" rel="preload" href="/component---src-components-blog-post-js-dbf37646bfa9775f9769.js"/><link as="fetch" rel="preload" href="/page-data/post-2/page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/page-data/app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><div><nav class="navbar-module--nav--3I2Aa"><div class="navbar-module--navLeft--1G_C8"><a class="Navbar__Brand-sc-2ueg8-0 iQlQwo" href="/">Vineeth Voruganti</a></div><div class="navbar-module--navRight--1uMLB"><a class="Navbar__PageLink-sc-2ueg8-1 eaYZpt" href="/">Blog </a><a class="Navbar__PageLink-sc-2ueg8-1 eaYZpt" href="/aboutme">About Me </a></div></nav><div class="post-module--main--270KK"><h1>🌠Turbocharge Windows Development with WSL</h1><p id="date">05/12/2020<!-- --> <!-- -->WSL</p><hr/><div><p>I am currently using a Surface Book as my main laptop for everyday work and development.
 Initially, when I was setting up Linux as a dual boot I found that I was not a
 fan of the drastic cut to performance and battery life I would have to commit to.
 So, I took it upon myself to try and optimize my development environment on Windows,
 despite it being less than ideal.</p>
 <p>The first thing I did was set up Windows Subsystem Linux (WSL). This is basically
-a utility that was built by microsoft that lets you run a terminal with a full linux
+a utility that was built by Microsoft that lets you run a terminal with a full Linux
 kernel while still in Windows. It sort of operates like a virtual machine, but
 you can access both your Linux and regular Windows file system from within it.
-There are two versions of this and which one you want to use will very depending
+There are two versions of this and which one you want to use will vary depending
 on your needs</p>
 <p>WSL 1 is the original version which has the benefit of being faster when you are
 messing with your Windows filesystem, while WSL 2 is the newer one and has better
 performance in the linux file system.</p>
-<p>I figured I would probably be staying within the linux file system so I opted to
+<p>I figured I would probably be staying within the Linux file system so I opted to
 use WSL 2. Now, at the time of writing this, WSL 2 was only available if you used
 the Windows Insider Build of Windows 10. I also chose to use the Ubuntu version
 of WSL, but you can choose whichever one you like.</p>
@@ -28,9 +28,9 @@ of WSL, but you can choose whichever one you like.</p>
 <p>The first thing I wanted to do was find a good terminal emulator that I could
 use that was fast and customizable. Initially, I was between
 <a href="https://conemu.github.io/">ConEMU</a> and <a href="https://github.com/alacritty/alacritty">Alacritty</a>.</p>
-<p>ConEMU seems to be the more feature rich application but I found the support for
+<p>ConEMU seems to be the more feature-rich application but I found the support for
 color customization to be quite lackluster as the color schemes I tried were not
-working. Also I found performance with apps like VIM were quite slow. <strong>Alacritty</strong>
+working. Also, I found performance with apps like <code>vim</code> were quite slow. <strong>Alacritty</strong>
 is great because it was built with performance in mind and messing with colors
 was really straight forward. </p>
 <p>I installed it using chocolatey</p>
@@ -46,12 +46,12 @@ C:Users{my user}\AppData\Roaming\alacritty.</p>
 <a href="https://www.microsoft.com/en-us/p/windows-terminal/9n0dx20hk701">Windows terminal</a>
 which was still in beta and experimental at the time. It had pretty could
 performance, but I found it was still fairly buggy when using TUI application
-or with managing nice colors schemes.</p>
+or with managing nice color schemes.</p>
 <h2>Tmux</h2>
 <p>The next thing I wanted to do was to configure Tmux to make sure that colors
-stayed the same (I'm a bit of a stickler for colorschemes if you haven't noticed).
+stayed the same (I'm a bit of a stickler for color schemes if you haven't noticed).
 I use the <a href="https://github.com/voronianski/oceanic-next-color-scheme">OceanicNext</a>
-Colorscheme, but it wasn't really showing up properly in tmux. So I had to edit my
+Color scheme, but it wasn't really showing up properly in tmux. So I had to edit my
 <code>.tmux.conf</code> file.</p>
 <pre><code class="language-tmux">set-option -sg escape-time 10
 set-option -g default-terminal "tmux-256color"
@@ -60,11 +60,11 @@ set-option -ga terminal-overrides ",*256col*:Tc"
 </code></pre>
 <p>After that my tmux looked just as beautiful as before.</p>
 <h2>Xserver</h2>
-<p>Finally, I wanted to setup an Xserver so that I could run gui applications from
+<p>Finally, I wanted to set up an Xserver so that I could run gui applications from
 within WSL. This isn't really perfect but I could. I downloaded an application
 called <a href="https://sourceforge.net/projects/vcxsrv/">VcXsrv</a>.</p>
-<p>Now in order to set it up to work with my WSL I needed to set the following
-variable in my <code>.bashrc</code>. Just make sure to substitute in your own ip address.
+<p>Now to set it up to work with WSL I set the following
+variable in my <code>.bashrc</code>. Just make sure to substitute in your own IP address.
 you can find it in the command prompt with <code>ipconfig</code></p>
 <p><strong>NOTE</strong> the ip address given if you run <code>ifconfig</code> in WSL is different than your
 actual IP address, so make sure you use command <em>prompt</em>.</p>
@@ -149,7 +149,7 @@ follow the same steps with WSL 1</p>
 run windows .exe programs from within WSL. You can try this out by typing
 <code>explorer.exe .</code> This is a handy trick to open a file explorer in your WSL partition.</p>
 <p>Also handy if you want to run a windows program on files in WSL without manually
-moving them to Windows. I used to this trick to develop Löve2D games from WSL
+moving them to Windows. I used this trick to develop Löve2D games from WSL
 and launch them from Windows.</p>
-<p>If you want to see more of my own environment you can checkout my
-<a href="https://github.com/VVoruganti/dotfiles">dotfiles</a> on my github page</p></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/post-2/";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-4b3e173a4604465e8cf8.js"],"component---cache-caches-gatsby-plugin-offline-app-shell-js":["/component---cache-caches-gatsby-plugin-offline-app-shell-js-4221fab6bc348d601965.js"],"component---src-components-blog-post-js":["/component---src-components-blog-post-js-dbf37646bfa9775f9769.js"],"component---src-pages-404-js":["/component---src-pages-404-js-339e181fcaf531610d75.js"],"component---src-pages-aboutme-js":["/component---src-pages-aboutme-js-c329583be86259420cc9.js"],"component---src-pages-index-js":["/component---src-pages-index-js-b3f4c5844ae069c75d0d.js"]};/*]]>*/</script><script src="/component---src-components-blog-post-js-dbf37646bfa9775f9769.js" async=""></script><script src="/6b22bcb9f177f895c17ee3db09c1f3a2c6fdec2f-8b16ae8faed901cd0849.js" async=""></script><script src="/styles-8636a280cbc61d53ad10.js" async=""></script><script src="/app-4b3e173a4604465e8cf8.js" async=""></script><script src="/framework-9fa3c3527bf76bdd7ce7.js" async=""></script><script src="/webpack-runtime-d69dc2f13669fd7d44c4.js" async=""></script></body></html>
+<p>If you want to see more of my own environment you can check out my
+<a href="https://github.com/VVoruganti/dotfiles">dotfiles</a> on my Github page</p></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/post-2/";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-4b3e173a4604465e8cf8.js"],"component---cache-caches-gatsby-plugin-offline-app-shell-js":["/component---cache-caches-gatsby-plugin-offline-app-shell-js-4221fab6bc348d601965.js"],"component---src-components-blog-post-js":["/component---src-components-blog-post-js-dbf37646bfa9775f9769.js"],"component---src-pages-404-js":["/component---src-pages-404-js-339e181fcaf531610d75.js"],"component---src-pages-aboutme-js":["/component---src-pages-aboutme-js-fb45ab1105cc17c29ef7.js"],"component---src-pages-index-js":["/component---src-pages-index-js-b3f4c5844ae069c75d0d.js"]};/*]]>*/</script><script src="/component---src-components-blog-post-js-dbf37646bfa9775f9769.js" async=""></script><script src="/6b22bcb9f177f895c17ee3db09c1f3a2c6fdec2f-8b16ae8faed901cd0849.js" async=""></script><script src="/styles-8636a280cbc61d53ad10.js" async=""></script><script src="/app-4b3e173a4604465e8cf8.js" async=""></script><script src="/framework-9fa3c3527bf76bdd7ce7.js" async=""></script><script src="/webpack-runtime-17b155b854d13812fd36.js" async=""></script></body></html>
