--- a/dream-journal-1/index.html
+++ b/dream-journal-1/index.html
@@ -4,13 +4,13 @@ data-styled.g1[id="Navbar__Brand-sc-2ueg8-0"]{content:"iQlQwo,"}/*!sc*/
 .eaYZpt:hover{background-color:#DDDDDD;}/*!sc*/
 data-styled.g2[id="Navbar__PageLink-sc-2ueg8-1"]{content:"eaYZpt,"}/*!sc*/
 </style><link rel="manifest" href="/manifest.webmanifest"/><link rel="apple-touch-icon" sizes="48x48" href="/icons/icon-48x48.png"/><link rel="apple-touch-icon" sizes="72x72" href="/icons/icon-72x72.png"/><link rel="apple-touch-icon" sizes="96x96" href="/icons/icon-96x96.png"/><link rel="apple-touch-icon" sizes="144x144" href="/icons/icon-144x144.png"/><link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.png"/><link rel="apple-touch-icon" sizes="256x256" href="/icons/icon-256x256.png"/><link rel="apple-touch-icon" sizes="384x384" href="/icons/icon-384x384.png"/><link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512x512.png"/><title data-react-helmet="true">☁ Dream Journal #1 | Vineeth Voruganti</title><meta data-react-helmet="true" name="description" content="Recently I&#x27;ve been having some pretty wild dreams and I was describing them to
-a good friend of mine who thought it would be a good idea if…"/><meta data-react-helmet="true" property="og:title" content="Recently I&#x27;ve been having some pretty wild dreams and I was describing them to
-a good friend of mine who thought it would be a good idea if…"/><meta data-react-helmet="true" property="og:type" content="website"/><meta data-react-helmet="true" name="twitter:card" content="summary"/><meta data-react-helmet="true" name="twitter:creator" content="Vineeth Voruganti"/><meta data-react-helmet="true" name="twitter:title" content="☁ Dream Journal #1"/><meta data-react-helmet="true" name="twitter:title" content="Recently I&#x27;ve been having some pretty wild dreams and I was describing them to
-a good friend of mine who thought it would be a good idea if…"/><link as="script" rel="preload" href="/webpack-runtime-8624f12ea8e580604d3a.js"/><link as="script" rel="preload" href="/framework-9fa3c3527bf76bdd7ce7.js"/><link as="script" rel="preload" href="/app-4b3e173a4604465e8cf8.js"/><link as="script" rel="preload" href="/styles-8636a280cbc61d53ad10.js"/><link as="script" rel="preload" href="/6b22bcb9f177f895c17ee3db09c1f3a2c6fdec2f-8b16ae8faed901cd0849.js"/><link as="script" rel="preload" href="/component---src-components-blog-post-js-70e4071dd747a3fc5e53.js"/><link as="fetch" rel="preload" href="/page-data/dream-journal-1/page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/page-data/app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><div><link rel="icon" href="/favicon.ico"/><nav class="navbar-module--nav--3I2Aa"><div class="navbar-module--navLeft--1G_C8"><a class="Navbar__Brand-sc-2ueg8-0 iQlQwo" href="/">Vineeth Voruganti</a></div><div class="navbar-module--navRight--1uMLB"><a class="Navbar__PageLink-sc-2ueg8-1 eaYZpt" href="/">Blog </a><a class="Navbar__PageLink-sc-2ueg8-1 eaYZpt" href="/aboutme">About Me </a></div></nav><div class="post-module--main--270KK"><h1>☁ Dream Journal #1</h1><p id="date">07/06/2020<!-- --> <!-- -->Dreams</p><hr/><div><p>Recently I've been having some pretty wild dreams and I was describing them to
-a good friend of mine who thought it would be a good idea if I tried starting a
-dream journal. I thought this would be a fun idea so here I go.</p>
+a good friend of mine who suggested the idea that I start a…"/><meta data-react-helmet="true" property="og:title" content="Recently I&#x27;ve been having some pretty wild dreams and I was describing them to
+a good friend of mine who suggested the idea that I start a…"/><meta data-react-helmet="true" property="og:type" content="website"/><meta data-react-helmet="true" name="twitter:card" content="summary"/><meta data-react-helmet="true" name="twitter:creator" content="Vineeth Voruganti"/><meta data-react-helmet="true" name="twitter:title" content="☁ Dream Journal #1"/><meta data-react-helmet="true" name="twitter:title" content="Recently I&#x27;ve been having some pretty wild dreams and I was describing them to
+a good friend of mine who suggested the idea that I start a…"/><link as="script" rel="preload" href="/webpack-runtime-8624f12ea8e580604d3a.js"/><link as="script" rel="preload" href="/framework-9fa3c3527bf76bdd7ce7.js"/><link as="script" rel="preload" href="/app-4b3e173a4604465e8cf8.js"/><link as="script" rel="preload" href="/styles-8636a280cbc61d53ad10.js"/><link as="script" rel="preload" href="/6b22bcb9f177f895c17ee3db09c1f3a2c6fdec2f-8b16ae8faed901cd0849.js"/><link as="script" rel="preload" href="/component---src-components-blog-post-js-70e4071dd747a3fc5e53.js"/><link as="fetch" rel="preload" href="/page-data/dream-journal-1/page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/page-data/app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><div><link rel="icon" href="/favicon.ico"/><nav class="navbar-module--nav--3I2Aa"><div class="navbar-module--navLeft--1G_C8"><a class="Navbar__Brand-sc-2ueg8-0 iQlQwo" href="/">Vineeth Voruganti</a></div><div class="navbar-module--navRight--1uMLB"><a class="Navbar__PageLink-sc-2ueg8-1 eaYZpt" href="/">Blog </a><a class="Navbar__PageLink-sc-2ueg8-1 eaYZpt" href="/aboutme">About Me </a></div></nav><div class="post-module--main--270KK"><h1>☁ Dream Journal #1</h1><p id="date">07/06/2020<!-- --> <!-- -->Dreams</p><hr/><div><p>Recently I've been having some pretty wild dreams and I was describing them to
+a good friend of mine who suggested the idea that I start a
+dream journal. I thought this would be a fun so here I go.</p>
 <h2>Rules of my Dreams</h2>
-<p>Before I get into my dream itself I want to explain some standard principles that
+<p>Before I get into my dream I want to explain some standard principles that
 my dreams tend to follow.</p>
 <p>First, I am fairly in control of the plotline and scenario of a dream,
 but I never realize this fact. My dream will quickly change depending on my
@@ -24,8 +24,8 @@ character besides me will be present in the dream, but will never say something.
 Usually, this probably just because I don't actually know what they would have
 said in whatever wacky scenario we're in. Nevertheless, I'll come up with a
 crazy explanation like "oh they were cursed by the evil queen in the castle" even
-when there has never been any mention of a queen before now.</p>
-<p>Now that I got that out of the way I wanted to describe my most recent vivid dream.</p>
+if there has never been any mention of a queen before now.</p>
+<p>Now that I got that out of the way, I wanted to describe my most recent vivid dream.</p>
 <h2>Dream</h2>
 <h3>The Party</h3>
 <p>So my dream started with me at a house party. It was not a house that I recognized
@@ -34,7 +34,7 @@ family friends which consisted of both my parents' and my brother's friends
 Both of these groups of people seemed to be endlessly embroiled in mindless
 chit chat, however, I cannot remember what they talked about. Besides these two groups,
 there was also me, my childhood friend, and a ton of small children 12 and younger.
-It was tasked to us to take care of the kids and keep them occupied. So we spent
+My friend and I were tasked with taking care of the kids and keeping them occupied. So we spent
 our time trying to come up with creative ways to keep the kids entertained. We gave
 them coloring books, played hide and seek, and at some point, I taught some of them
 how to play League of Legends. At this point, I thought everything was going well,
