--- a/love2d-on-wsl/index.html
+++ b/love2d-on-wsl/index.html
@@ -116,29 +116,143 @@ the dialog window that pops up.</p>
 <p>From here click on environment variables and add the <em>.exe</em> for Löve2D to your path.
 For me this was located at <strong>C:/Program Files/LOVE</strong> but this could vary depending
 on what options you picked during installation</p>
-<p>You can test this by opening up command prompt and typing <code>love</code> into the shell.
+<p>You can test this by opening up command prompt and typing <code class="abyss grvsc-mm-tJ07fR" data-language="bash" data-index="0"><span class="grvsc-t9ljLd-1 grvsc-tJ07fR-1">love</span></code> into the shell.
 This should load the balloon GIF shown above. Once this is working you are ready
 to transition to WSL.</p>
 <h2>Setting it up on WSL</h2>
 <p>Open up WSL in your desired method</p>
 <ul>
 <li>Typing WSL into run.exe</li>
-<li>Typing <code>wsl</code> in command prompt</li>
+<li>Typing <code class="abyss grvsc-mm-tJ07fR" data-language="bash" data-index="1"><span class="grvsc-t9ljLd-1 grvsc-tJ07fR-1">wsl</span></code> in command prompt</li>
 <li>Using another terminal emulator</li>
 </ul>
 <p>Now in WSL2, you can run windows <em>exe's</em> by typing in the name of the entire exe.
 However, it needs to be on your path for it to work. An example of this is to type
-<code>explorer.exe</code> to open up the windows file explorer</p>
-<p>Typing <code>explorer.exe .</code> in WSL will open the windows file explorer in the WSL
+<code class="abyss grvsc-mm-tJ07fR" data-language="bash" data-index="2"><span class="grvsc-t9ljLd-1 grvsc-tJ07fR-1">explorer.exe</span></code> to open up the windows file explorer</p>
+<p>Typing <code class="abyss grvsc-mm-tJ07fR" data-language="bash" data-index="3"><span class="grvsc-t9ljLd-1 grvsc-tJ07fR-1">explorer.exe </span><span class="grvsc-t9ljLd-15 grvsc-tJ07fR-11">.</span></code> in WSL will open the windows file explorer in the WSL
 file system</p>
-<p>So from WSL, you can type <code>love.exe</code> to run Löve2D from within WSL. To make the
+<p>So from WSL, you can type <code class="abyss grvsc-mm-tJ07fR" data-language="bash" data-index="4"><span class="grvsc-t9ljLd-1 grvsc-tJ07fR-1">love.exe</span></code> to run Löve2D from within WSL. To make the
 development process similar to Linux/Unix you can make an alias to it. Personally,
-I don't like typing out the <em>.exe</em> every time so I have an alias for <code>love</code>. The below
+I don't like typing out the <em>.exe</em> every time so I have an alias for <code class="abyss grvsc-mm-tJ07fR" data-language="bash" data-index="5"><span class="grvsc-t9ljLd-1 grvsc-tJ07fR-1">love</span></code>. The below
 script will add the alias to your bashrc and source it.</p>
-<pre><code class="language-bash">$ echo "alias love='love.exe'" >> ~/.bashrc
-$ source ~/.bashrc
-</code></pre>
+<pre class="grvsc-container abyss grvsc-mm-tJ07fR" data-language="bash" data-index="0"><code class="grvsc-code"><span class="grvsc-line"><span class="grvsc-source"><span class="grvsc-t9ljLd-1 grvsc-tJ07fR-1">$ </span><span class="grvsc-t9ljLd-15 grvsc-tJ07fR-11">echo</span><span class="grvsc-t9ljLd-1 grvsc-tJ07fR-1"> </span><span class="grvsc-t9ljLd-11 grvsc-tJ07fR-8">&quot;alias love=&#39;love.exe&#39;&quot;</span><span class="grvsc-t9ljLd-1 grvsc-tJ07fR-1"> </span><span class="grvsc-t9ljLd-7 grvsc-tJ07fR-15">&gt;&gt;</span><span class="grvsc-t9ljLd-1 grvsc-tJ07fR-1"> </span><span class="grvsc-t9ljLd-7 grvsc-tJ07fR-15">~</span><span class="grvsc-t9ljLd-1 grvsc-tJ07fR-1">/.bashrc</span></span></span>
+<span class="grvsc-line"><span class="grvsc-source"><span class="grvsc-t9ljLd-1 grvsc-tJ07fR-1">$ </span><span class="grvsc-t9ljLd-15 grvsc-tJ07fR-11">source</span><span class="grvsc-t9ljLd-1 grvsc-tJ07fR-1"> </span><span class="grvsc-t9ljLd-7 grvsc-tJ07fR-15">~</span><span class="grvsc-t9ljLd-1 grvsc-tJ07fR-1">/.bashrc</span></span></span></code></pre>
 <p>If you are using a different shell or would prefer to put your aliases somewhere
 else you can write it in manually.</p>
-<p>Now you should be able to simply type <code>love</code> in your terminal to run Löve2D. You
-are ready to develop and prototype your own games!! 🎮</p></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/love2d-on-wsl/";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-4b3e173a4604465e8cf8.js"],"component---cache-caches-gatsby-plugin-offline-app-shell-js":["/component---cache-caches-gatsby-plugin-offline-app-shell-js-4221fab6bc348d601965.js"],"component---src-components-blog-post-js":["/component---src-components-blog-post-js-5939947c99f6e52d8a1d.js"],"component---src-pages-404-js":["/component---src-pages-404-js-86d174a439d39c82d0fa.js"],"component---src-pages-aboutme-js":["/component---src-pages-aboutme-js-6c9eed038a6c237a8da1.js"],"component---src-pages-index-js":["/component---src-pages-index-js-a6d45fd06c61cfcef0ba.js"]};/*]]>*/</script><script src="/component---src-components-blog-post-js-5939947c99f6e52d8a1d.js" async=""></script><script src="/6b22bcb9f177f895c17ee3db09c1f3a2c6fdec2f-d00e28209de527e8a398.js" async=""></script><script src="/styles-8636a280cbc61d53ad10.js" async=""></script><script src="/app-4b3e173a4604465e8cf8.js" async=""></script><script src="/framework-9fa3c3527bf76bdd7ce7.js" async=""></script><script src="/webpack-runtime-00bcb24257bcfc717e1b.js" async=""></script></body></html>
+<p>Now you should be able to simply type <code class="abyss grvsc-mm-tJ07fR" data-language="bash" data-index="6"><span class="grvsc-t9ljLd-1 grvsc-tJ07fR-1">love</span></code> in your terminal to run Löve2D. You
+are ready to develop and prototype your own games!! 🎮</p>
+<style class="grvsc-styles">
+  .grvsc-container {
+    overflow: auto;
+    position: relative;
+    -webkit-overflow-scrolling: touch;
+    padding-top: 1rem;
+    padding-top: var(--grvsc-padding-top, var(--grvsc-padding-v, 1rem));
+    padding-bottom: 1rem;
+    padding-bottom: var(--grvsc-padding-bottom, var(--grvsc-padding-v, 1rem));
+    border-radius: 8px;
+    border-radius: var(--grvsc-border-radius, 8px);
+    font-feature-settings: normal;
+    line-height: 1.4;
+  }
+  
+  .grvsc-code {
+    display: table;
+  }
+  
+  .grvsc-line {
+    display: table-row;
+    box-sizing: border-box;
+    width: 100%;
+    position: relative;
+  }
+  
+  .grvsc-line > * {
+    position: relative;
+  }
+  
+  .grvsc-gutter-pad {
+    display: table-cell;
+    padding-left: 0.75rem;
+    padding-left: calc(var(--grvsc-padding-left, var(--grvsc-padding-h, 1.5rem)) / 2);
+  }
+  
+  .grvsc-gutter {
+    display: table-cell;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+  }
+  
+  .grvsc-gutter::before {
+    content: attr(data-content);
+  }
+  
+  .grvsc-source {
+    display: table-cell;
+    padding-left: 1.5rem;
+    padding-left: var(--grvsc-padding-left, var(--grvsc-padding-h, 1.5rem));
+    padding-right: 1.5rem;
+    padding-right: var(--grvsc-padding-right, var(--grvsc-padding-h, 1.5rem));
+  }
+  
+  .grvsc-source:empty::after {
+    content: ' ';
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+  }
+  
+  .grvsc-gutter + .grvsc-source {
+    padding-left: 0.75rem;
+    padding-left: calc(var(--grvsc-padding-left, var(--grvsc-padding-h, 1.5rem)) / 2);
+  }
+  
+  /* Line transformer styles */
+  
+  .grvsc-has-line-highlighting > .grvsc-code > .grvsc-line::before {
+    content: ' ';
+    position: absolute;
+    width: 100%;
+  }
+  
+  .grvsc-line-diff-add::before {
+    background-color: var(--grvsc-line-diff-add-background-color, rgba(0, 255, 60, 0.2));
+  }
+  
+  .grvsc-line-diff-del::before {
+    background-color: var(--grvsc-line-diff-del-background-color, rgba(255, 0, 20, 0.2));
+  }
+  
+  .grvsc-line-number {
+    padding: 0 2px;
+    text-align: right;
+    opacity: 0.7;
+  }
+  
+  .abyss { background-color: #000c18; }
+  .abyss .grvsc-t9ljLd-1 { color: #6688CC; }
+  .abyss .grvsc-t9ljLd-15 { color: #9966B8; }
+  .abyss .grvsc-t9ljLd-11 { color: #22AA44; }
+  .abyss .grvsc-t9ljLd-7 { color: #225588; }
+  .abyss .grvsc-line-highlighted::before {
+    background-color: var(--grvsc-line-highlighted-background-color, rgba(255, 255, 255, 0.1));
+    box-shadow: inset var(--grvsc-line-highlighted-border-width, 4px) 0 0 0 var(--grvsc-line-highlighted-border-color, rgba(255, 255, 255, 0.5));
+  }
+  
+  /* Monokai dimmed */
+  @media (prefers-color-scheme: dark) {
+    .grvsc-mm-tJ07fR {
+      background-color: #1e1e1e;
+      color: #c5c8c6;
+    }
+    .grvsc-mm-tJ07fR .grvsc-tJ07fR-1 { color: #C5C8C6FF; }
+    .grvsc-mm-tJ07fR .grvsc-tJ07fR-11 { color: #9872A2; }
+    .grvsc-mm-tJ07fR .grvsc-tJ07fR-8 { color: #9AA83A; }
+    .grvsc-mm-tJ07fR .grvsc-tJ07fR-15 { color: #676867; }
+    .grvsc-mm-tJ07fR .grvsc-line-highlighted::before {
+      background-color: var(--grvsc-line-highlighted-background-color, rgba(255, 255, 255, 0.1));
+      box-shadow: inset var(--grvsc-line-highlighted-border-width, 4px) 0 0 0 var(--grvsc-line-highlighted-border-color, rgba(255, 255, 255, 0.5));
+    }
+  }
+</style></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/love2d-on-wsl/";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-4b3e173a4604465e8cf8.js"],"component---cache-caches-gatsby-plugin-offline-app-shell-js":["/component---cache-caches-gatsby-plugin-offline-app-shell-js-4221fab6bc348d601965.js"],"component---src-components-blog-post-js":["/component---src-components-blog-post-js-5939947c99f6e52d8a1d.js"],"component---src-pages-404-js":["/component---src-pages-404-js-86d174a439d39c82d0fa.js"],"component---src-pages-aboutme-js":["/component---src-pages-aboutme-js-6c9eed038a6c237a8da1.js"],"component---src-pages-index-js":["/component---src-pages-index-js-a6d45fd06c61cfcef0ba.js"]};/*]]>*/</script><script src="/component---src-components-blog-post-js-5939947c99f6e52d8a1d.js" async=""></script><script src="/6b22bcb9f177f895c17ee3db09c1f3a2c6fdec2f-d00e28209de527e8a398.js" async=""></script><script src="/styles-8636a280cbc61d53ad10.js" async=""></script><script src="/app-4b3e173a4604465e8cf8.js" async=""></script><script src="/framework-9fa3c3527bf76bdd7ce7.js" async=""></script><script src="/webpack-runtime-00bcb24257bcfc717e1b.js" async=""></script></body></html>
